--- a/css/principal.css
+++ b/css/principal.css
@@ -131,6 +131,7 @@
         text-align: center;
     }
     #dev{
+        margin-left: 15%;
         margin-top: 18%;
         margin-bottom: 18%;
     }
