--- a/css/principal.css
+++ b/css/principal.css
@@ -4,7 +4,7 @@
     }
     body{
         background-color:rgb(41, 41, 41);
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-family: fira code, Arial, Helvetica, sans-serif;
         width: 80%;
         margin: 0 auto;
     }
@@ -16,7 +16,7 @@
     nav{
         color: #ff4500;
         margin-top: 2.5%;
-        margin-left: 58%;
+        margin-left: 51%;
         font-size: 1.1em;
         float: left;
     }
@@ -34,6 +34,7 @@
     }
     nav a:hover{
         color: #ff4500;
+        text-decoration: none;
     }
     #home{
         margin-top: 6%;
@@ -51,12 +52,12 @@
     #arte{
         float: left;
         margin-top: 5%;
-        margin-left: 38%;
+        margin-left: 30%;
     }
     #cv{
         color: rgb(24, 24, 24);
         text-decoration: none;
-        transition: 0.8s all;
+        transition: 0.5s all;
         padding: 15px;
         border-radius: 8px;
         background-color: #ff4500;
@@ -67,7 +68,7 @@
         padding: 15px;
         border: 1px solid #ff4500;
         border-radius: 8px;
-        transition: 0.8s all;
+        transition: 0.5s all;
     }
     #cv:hover{
         background-color: azure;
@@ -126,17 +127,24 @@
     #p4{
         margin-top: 7.5%;
     }
-    #p4 h3{
+    #p4, #p5 h3{
         color: #ff4500;
         text-align: center;
     }
     #dev{
-        margin-left: 35%;
         margin-top: 18%;
         margin-bottom: 18%;
     }
-    footer{
-        text-align: center;
-        background: linear-gradient(rgb(58, 58, 58), #ff4500);
-        border-radius: 35px;
+    #skills{
+        width: 60%;
+        margin: 15% auto;
+    }
+    #js, #css, #boot{
+        margin-left: 10%;
+    }
+    #html{
+        margin-left: 5%;
+    }
+    #boot{
+        margin-top: 15px;
     }
