--- a/css/principal.css
+++ b/css/principal.css
@@ -2,9 +2,14 @@
     margin:0 ;
     padding:0 ;
     }
+    header{
+        background-color: rgb(41, 41, 41);
+        box-shadow: 0px 5px 15px 0px;
+        
+    }
     body{
         background-color:rgb(41, 41, 41);
-        font-family: fira code, Arial, Helvetica, sans-serif;
+        font-family: montserrat;
         width: 80%;
         margin: 0 auto;
     }
@@ -79,6 +84,9 @@
         color: rgb(24, 24, 24);
         border: 1px solid orange;
     }
+    #p1{
+        margin-top: 8%;
+    }
     #p2{
         padding-top: 7%;
         clear: both;
@@ -96,6 +104,9 @@
     #in, #ig, #em{
         margin-left: 10%;
         margin-right: 10%;
+    }
+    #p3{
+        margin: 0 auto;
     }
     #p3 h3, #icons h3{
         margin-bottom: 10%;
@@ -115,6 +126,7 @@
     }
     .placasL{
         background-color: #ff4500;
+        margin-left: 0.5%;
     }
     .placasP2{
         background-color: black;
@@ -136,15 +148,9 @@
         margin-bottom: 18%;
     }
     #skills{
-        width: 60%;
+        width: 62.8%;
         margin: 15% auto;
     }
     #js, #css, #boot{
-        margin-left: 10%;
-    }
-    #html{
-        margin-left: 5%;
-    }
-    #boot{
-        margin-top: 15px;
+        margin-left: 15%;
     }
