--- a/css/principal.css
+++ b/css/principal.css
@@ -3,20 +3,34 @@
     padding:0 ;
     }
     header{
-        background-color: rgb(41, 41, 41);
-        box-shadow: 0px 5px 15px 0px;
+        background-color: rgba(41, 41, 41, 0.7);
+        box-shadow: 5px 5px 5px 2px;
         
     }
     body{
         background-color:rgb(41, 41, 41);
         font-family: montserrat, sans-serif, Arial, Helvetica;
-        width: 80%;
+    }
+    header,#p1,#p2,#p3,#p4,#p5{
         margin: 0 auto;
     }
     #jv{
+        margin-left: 9.5%;
         display: flex;
         margin-top: 2%;
         height: auto;
+    }
+    #arte{
+        float: left;
+        margin-left: 33%;
+        margin-top: 3%;
+        border: 1px solid #fff;
+        width: 300px;
+        height: 300px;
+        background-image: url(../img/arte.jpg);
+        background-size: cover;
+        background-position: right;
+        border-radius: 150px;
     }
     nav{
         color: #ff4500;
@@ -54,11 +68,6 @@
         color: azure;
         font-size: 2.5em;
     }
-    #arte{
-        float: left;
-        margin-top: 5%;
-        margin-left: 30%;
-    }
     #cv{
         color: rgb(24, 24, 24);
         text-decoration: none;
@@ -66,6 +75,7 @@
         padding: 15px;
         border-radius: 8px;
         background-color: #ff4500;
+        box-shadow: 1px 1px 15px 0px;
     }
     #ctt{
         color: #ff4500;
@@ -81,11 +91,13 @@
     }
     #ctt:hover{
         background-color: azure;
-        color: rgb(24, 24, 24);
+        color: #ff4500;
         border: 1px solid orange;
+        box-shadow: 1px 1px 15px 0px;
     }
-    #p1{
-        margin-top: 8%;
+    #p1,#p2,#p3,#p4,#p5{
+        width: 80%;
+        margin: 0 auto;
     }
     #p2{
         padding-top: 7%;
@@ -102,13 +114,21 @@
         margin-top: 15%;
     }
     #in, #ig, #em{
-        margin-left: 10%;
-        margin-right: 10%;
+        margin: 10%;
     }
-    #p3{
+    #p3 h3{
+        color: #ff4500;
         margin: 0 auto;
+        text-align: center;
+        margin-top: 10%;
+        margin-bottom: 10%;
     }
-    #p3 h3, #icons h3{
+    #projetos{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+    #icons h3{
         margin-bottom: 10%;
         color: #ff4500;
         text-align: center;
@@ -117,30 +137,16 @@
     .placasP, .placasL, .placasL2, .placasP2{
         width: 250px;
         height: 350px;
-        display: inline-block;
-        margin-top: 4%;
-    }
-    .placasP{
-        background-color: black;
-        margin-left: 1%;
-    }
-    .placasL{
         background-color: #ff4500;
-        margin-left: 0.5%;
+        margin: 0.5%;
+        margin-top: 5%;
     }
-    .placasP2{
-        background-color: black;
-        margin-left: 1%;
-    }
-    .placasL2{
-        background-color: #ff4500;
-        margin-left: 1%;
+    #p4 h3, #p5 h3{
+        margin-top: 10%;
+        color: #ff4500;
+        text-align: center;
     }
     #p4{
-        margin-top: 7.5%;
-    }
-    #p4, #p5 h3{
-        color: #ff4500;
         text-align: center;
     }
     #dev{
@@ -148,9 +154,16 @@
         margin-bottom: 18%;
     }
     #skills{
-        width: 62.8%;
-        margin: 15% auto;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin-top: 15%;
+        margin-bottom: 15%;
     }
     #js, #css, #boot{
         margin-left: 15%;
+    }
+    footer{
+        text-align: center;
+        color: #fff;
     }
