--- a/css/principal.css
+++ b/css/principal.css
@@ -1,210 +1,252 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+
 *{
-    margin:0 ;
-    padding:0 ;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    text-transform: capitalize;
+    text-decoration: none;
+    outline: none; border: none;
+    transition: .2s linear;
+}
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 9rem;
+    scroll-behavior: smooth;
+}
+html::-webkit-scrollbar{
+    width: .6rem;
+}
+html::-webkit-scrollbar-track{
+    background: transparent;
+}
+html::-webkit-scrollbar-thumb{
+    background: orangered;
+    border-radius: 5rem;
+}
+body{
+    background: #000721;
+}
+.cabecalho{
+    background: rgba(17, 17, 17, 0.705);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 7%;
+    position: fixed;
+    top: 0; left: 0; right: 0;
+}
+.cabecalho .logo img{
+    width: 8rem;
+}
+.cabecalho .navbar a{
+    margin: 0 1rem;
+    font-size: 1.6rem;
+    color: aliceblue;
+}
+.cabecalho .navbar a:hover{
+    color: orangered;
+    padding-bottom: 0.5rem;
+    border-bottom: .1rem solid orangered;
+}
+.cabecalho .icone div{
+    color: orangered;
+    cursor: pointer;
+    font-size: 2rem;
+    margin-left: 2rem;
+}
+#menu-btn{
+    display: none;
+}
+.home{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    background: url(../img/repensando-software.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.home .conteudo{
+    max-width: 60rem;
+    margin-left: 2rem;
+}
+.home .conteudo h1{
+    color: rgb(255, 255, 255);
+    font-size: 6rem;
+}
+.home .conteudo span{
+    color: orangered;
+}
+.btn{
+    margin: 2rem;
+    padding: 1.8rem .5rem;
+    border-radius: 5px;
+    cursor: pointer;
+    background: rgb(39, 39, 39);
+    text-align: center;
+    font-size: 1.6rem;
+}
+.btn a{
+    color: rgb(177, 172, 172);
+}
+.btn:hover{
+    background: orangered;
+}
+.btn a:hover{
+    letter-spacing: .2rem;
+}
+.heading{
+    margin-top: 1rem;
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 4rem;
+    padding-bottom: 3.5rem;
+}
+.heading span{
+    color: orangered;
+    text-transform: uppercase;
+    font-size: 4rem;
+}
+.sobre .linha{
+    margin: 1rem;
+    display: flex;
+    align-items: center;
+    background: rgb(80, 79, 79);
+    flex-wrap: wrap;
+}
+.sobre .linha .imagem{
+    flex: 1 1 45rem;
+}
+.sobre .linha .imagem img{
+    width: 100%;
+    padding: 1rem;
+}
+.sobre .linha .conteudo{
+    flex: 1 1 45rem;
+    padding: 2rem;
+}
+.sobre .linha .conteudo h3{
+    font-size: 3rem;
+    color: #ccc;
+}
+.sobre .linha .conteudo p{
+    font-size: 1.6rem;
+    color: #ccc;
+    padding: 1rem 0;
+    line-height: 1.8;
+}
+.projetos .box-container{
+    margin: 0 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
+    gap: 1.5rem;
+}
+.projetos .box-container .box{
+    padding: 2rem;
+    text-align: center;
+    border: rgb(255, 255, 255) solid .1rem;
+    background: #000514;
+}
+.projetos .box-container .box img{
+    height: 20rem;
+    width: 25rem;
+}
+.projetos .box-container .box h3{
+    color: #fff;
+    font-size: 2rem;
+    padding: 1rem 0;
+    font-weight: normal;
+}
+.skills .box-container{
+    margin: 0 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
+    gap: 1.5rem;
+}
+.skills .box-container .box{
+    padding: 2rem;
+    text-align: center;
+    border: rgb(255, 255, 255) solid .1rem;
+    background: #000514;
+}
+.skills .box-container .box img{
+    height: 15rem;
+    width: 10rem;
+}
+.skills .box-container .box h3{
+    color: #fff;
+    font-size: 2rem;
+    padding: 1rem 0;
+    font-weight: normal;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:991px){
+    html{
+        font-size: 55%;
     }
-    header{
-        background-color: rgba(41, 41, 41, 0.7);
-        box-shadow: 5px 5px 5px 2px;
-        
+    .cabecalho{
+        padding: 1.5rem 2rem;
     }
-    body{
-        background-color:rgb(41, 41, 41);
-        font-family: montserrat, sans-serif, Arial, Helvetica;
+    section{
+        padding: 2rem;
     }
-    header,#p1,#p2,#p3,#p4,#p5{
-        margin: 0 auto;
+
+}
+@media (max-width:768px){
+    #menu-btn{
+        display: inline-block;
+        width: rem;
     }
-    #jv{
-        margin-left: 9.5%;
-        display: flex;
-        margin-top: 2%;
-        height: auto;
+    .cabecalho .navbar{
+        position: absolute;
+        top: 100%; right: -100%;
+        background: #000514;
+        width: 30rem;
+        height: calc(100vh - 9.5rem);
     }
-    nav{
-        color: #ff4500;
-        margin-top: 2.5%;
-        margin-left: 51%;
-        font-size: 1.1em;
-        float: left;
-    }
-    ul{
-        list-style: none;
-        float: left;
-    }
-    ul li{
-        margin-left: 30px;
-        float: left;
-    }
-    nav a{
-        color: aliceblue;
-        text-decoration: none;
-    }
-    nav a:hover{
-        color: #ff4500;
-        text-decoration: none;
-    }
-    #botao{
-        margin-top: 20px;
-        display: flex;
-        width: 371px;
-        flex-wrap: wrap;
-    }
-    #p1 h1{
-        color: azure;
-        font-size: 2.5em;
-    }
-    #p1 p{
-        color: #ff4500;
-    }
-    #eu{
-        margin-top: 50px;
-        float: left;
-    }
-    .clear{
-        clear: both;
-    }
-    #img{
-        float: right;
-        margin-top: 25px;
-        border: 1px solid #fff;
-        width: 200px;
-        height: 200px;
-        background: url(../img/arte.jpg);
-        background-size: cover;
-        background-position: right;
-        border-radius: 100px;
-    }
-    #cv{
+    .cabecalho .navbar a{
+        color: orangered;
         display: block;
-        text-align: center;
-        width: 180px;
-        height: 50px;
-        color: rgb(24, 24, 24);
-        text-decoration: none;
-        transition: 0.5s all;
-        padding: 15px;
-        border-radius: 8px;
-        background-color: #ff4500;
-        box-shadow: 1px 1px 15px 0px;
-        margin-right: 10px;
+        margin: 1.5rem;
+        padding: .5rem;
+        font-size: 2rem;
     }
-    #ctt{
-        display: block;
-        width: 180px;
-        height: 50px;
-        color: #ff4500;
-        text-decoration: none;
-        padding: 15px;
-        border: 1px solid #ff4500;
-        border-radius: 8px;
-        transition: 0.5s all;
+    .cabecalho .navbar.active{
+        right: 0;
     }
-    #cv:hover{
-        background-color: azure;
-        color: #ff4500;
-    }
-    #ctt:hover{
-        background-color: azure;
-        color: #ff4500;
-        border: 1px solid orange;
-        box-shadow: 1px 1px 15px 0px;
-    }
-    #p1,#p2,#p3,#p4,#p5,#botao{
-        width: 80%;
-        margin: 0 auto;
-    }
-    #p2{
-        padding-top: 7%;
-        clear: both;
-        text-align: center;
-    }
-    #p2 h3{
-        color: #ff4500;
-        
-    }
-    #p2 p{
-        color: azure;
-    }
-    #icons{
-        display: flex;
-        margin-top: 15%;
+    .home{
+        background-position: left;
         justify-content: center;
-        flex-wrap: wrap;
-    }
-    #icons a {
-        display: block;
-    }
-    #in, #ig, #em{
-        margin: 10%;
-    }
-    #p3 h3{
-        color: #ff4500;
-        margin: 0 auto;
-        text-align: center;
-        margin-top: 10%;
-        margin-bottom: 10%;
-    }
-    #projetos{
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-    }
-    #museu{
-        display: block;
-        width: 350px;
-        height: 250px;
-        background: url(../img/projeto1h.png);
-        background-size: cover;
-        transition: 0.5s all;
-    }
-    #museu:hover{
-        background: url(../img/projeto1.png);
-    }
-    #reclame_aqui{
-        display: block;
-        width: 350px;
-        height: 250px;
-        background: url(../img/projeto2.png);
-        transition: 0.5s all;
-    }
-    #reclame_aqui:hover{
-        background: url(../img/projeto2h.png);
-    }
-    #p4 h3, #p5 h3{
-        margin-top: 10%;
-        color: #ff4500;
         text-align: center;
     }
-    #p4{
-        text-align: center;
+    .home .conteudo h3{
+        font-size: 4.5rem;
     }
-    #dev{
-        margin-top: 18%;
-        margin-bottom: 18%;
+    .home .conteudo p{
+        font-size: 1.5rem;
+        color: orangered;
     }
-    #skills{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        margin-top: 15%;
-        margin-bottom: 15%;
+}
+@media(max-width:450px){
+    html{
+        font-size: 50%;
     }
-    #js, #css, #boot{
-        margin-left: 15%;
-    }
-    footer{
-        text-align: center;
-        color: #fff;
-    }
-    @media (max-width: 767px) {
-        #botao{
-            display: block;
-        }
-        #ctt{
-            margin-top: 10px;
-        }
-        #img{
-            float: left;
-            margin-bottom: 15px;
-        }
-    }
+}
